--- a/style.css
+++ b/style.css
@@ -153,3 +153,82 @@ body{
 .computer-image img {
     width: 450px;
 }
+
+.prof-team {
+    background: #e9e9e95e;
+}
+
+.prof-team header {
+    text-align: center;
+    font-size: 50px;
+    font-weight: bold;
+    padding: 30px 0;
+}
+
+.team-body {
+    display: flex;
+    width: 1280px;
+    margin: 0 auto;
+}
+
+.member {
+    background: #8080802b;
+    width: 33.3%;
+}
+
+.member-content {
+    padding: 20px;
+}
+
+.member-content h2, .member-content h3, .member-content p {
+    font-weight: normal;
+    padding-bottom: 10px; 
+}
+
+.team-body img{
+    width: 100%;
+}
+.right-side{
+    background-color: rgb(36, 35, 35);
+    width: 50%;
+    color: white;
+
+}
+.poeple-say-section{
+    display: flex;
+
+}
+.left-side{
+    width: 50%;
+    
+}
+.left-side img{
+    width: 100%;
+    
+}
+
+.right-side p {
+    color: rgb(172, 161, 161);
+    font-size: 25px;
+    font-style: italic;
+}
+.right-side h1{
+    font-size: 35px;
+    padding-bottom: 20px;
+    
+}
+
+.right-side-body{
+    
+    width: 80%;
+    text-align: left;
+    padding-left: 100px;
+    padding-top: 100px;
+    margin: 0 auto;
+
+    
+    
+
+
+
+}
