--- a/style.css
+++ b/style.css
@@ -225,10 +225,67 @@ body{
     padding-left: 100px;
     padding-top: 100px;
     margin: 0 auto;
+ }
 
-    
-    
+ .plan-section{
+background-color: whitesmoke;
+margin-bottom: 60px;
+
+ }
+
+ .plan-body {
+     display: flex;
+     
+ }
+ .category{
+    width: 33.3%;
+    padding: 0px 50px;
+    color: rgb(115, 115, 115);
+    font-size: 30px;
+    background-color: rgb(223, 245, 243);
+    margin: 0px 10px;
+    padding-bottom: 20px;
+ }
+ .buttom-part{
+     display: flex;
+     padding-top: 20px;
+     font-size: 15px;
+     border-top: 1px solid black;
+ }
+ .buttom-part button{
+    border-radius: 100px;
+    margin-left: 60px;
+    font-size: 15px;
+    background-color: #80cb84a6;
+    color: white;
+
+ } 
+ .plan-section header{
+     font-size: 35px;
+     text-align: center;
+     padding: 60px 0;
+     
+ }
+ .plan-body{
+       
+ }
+ .category h3{
+ padding: 30px 0;
+ font-size: 30px;
+ }
+ .list{
+    padding-bottom: 20px;
+    padding-top: 20px;
+ }
+
+ .list li{
+    list-style-type: none;
+    font-size: 15px;
+    padding: 5px 0;
 
 
-
-}
+ }
+ .category h3{
+    border-bottom: 1px solid black;
+     
+ }
