--- a/style.css
+++ b/style.css
@@ -192,6 +192,12 @@ body{
     background-color: rgb(36, 35, 35);
     width: 50%;
     color: white;
+    
+
+}
+.poeple-container{
+    width: 1280px;
+    margin:0 auto;
 
 }
 .poeple-say-section{
@@ -220,11 +226,27 @@ body{
 
 .right-side-body{
     
-    width: 80%;
+   
     text-align: left;
-    padding-left: 100px;
-    padding-top: 100px;
+    
     margin: 0 auto;
+    padding: 60px;
+ }
+ .boy-image{
+     display: flex;
+     padding: 40px 0;
+
+ }
+ .boy-image img{
+     width: 60px;
+     height:60px; 
+     border-radius: 50%;
+     border: 4px solid white;
+  }
+
+ .boy-image p{
+     padding: 20px;
+
  }
 
  .plan-section{
@@ -235,6 +257,8 @@ margin-bottom: 60px;
 
  .plan-body {
      display: flex;
+     width: 1280px;
+     margin: 0 auto;
      
  }
  .category{
@@ -248,6 +272,7 @@ margin-bottom: 60px;
  }
  .buttom-part{
      display: flex;
+     align-items: center;
      padding-top: 20px;
      font-size: 15px;
      border-top: 1px solid black;
@@ -258,8 +283,15 @@ margin-bottom: 60px;
     font-size: 15px;
     background-color: #80cb84a6;
     color: white;
+    height: 40px;
+    width: 150px;
 
  } 
+ .buttom-part p{
+
+    
+
+ }
  .plan-section header{
      font-size: 35px;
      text-align: center;
